Fri Jan  4 08:01:31 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: implement command
	  line option --dump-ast.

	* net/loveruby/cflat/compiler/Compiler.java: implement command
	  line option --dump-tokens.

	* net/loveruby/cflat/ast/Dumper.java: new class; AST dumper.

	* net/loveruby/cflat/ast/Dumpable.java: new interface; AST dumper
	  interface.

	* net/loveruby/cflat/ast/*.java: define #dump, #_dump.

	* net/loveruby/cflat/asm/Assembler.java: fork
	  utils/TextUtils.java.

	* net/loveruby/cflat/utils/TextUtils.java: new file.

	* test/stdlib.hb: new header file.

	* test/unistd.hb: new header file.

Fri Jan  4 03:23:34 2008  Minero Aoki  <aamine@loveruby.net>

	* test/struct-semcheck10.cb: test struct which contains void.

	* test/union-semcheck10.cb: test union which contains void.

	* test/array-semcheck1.cb: test array which contains void.

	* test/test.sh: run them.

Fri Jan  4 03:15:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: refactoring:
	  unify gvar/lvar initializer resolver.

	* net/loveruby/cflat/compiler/TypeChecker.java: check gvar
	  initializer.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: resolve
	  gvar initializer.

	* net/loveruby/cflat/ast/AST.java: new method #variables.

	* test/initializer.cb: test variable initializer.

	* test/stdio.hb: return type of printf/puts/putc is int.

	* test/usertype.cb: ditto.

	* test/funcptr.cb: ditto.

Fri Jan  4 02:47:18 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Visitor.java: did not visit lvar
	  initializer.

	* net/loveruby/cflat/compiler/TypeChecker.java: check lvar
	  initializer.

	* net/loveruby/cflat/ast/DefinedVariable.java: new method
	  #setInitializer.

	* net/loveruby/cflat/type/PointerType.java (isSameType): all array
	  is same type (allocated arrays are rejected by LHS check).

	* test/block.cb: was wrong test.

	* test/assign.cb: add tests.
